[package]
name = "complex-bessel-rs"
description = "Library to compute Bessel functions"
version = "0.0.2"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["Christian Belloni"]
homepage = "https://github.com/ChristianBelloni/complex-bessel-rs"
repository = "https://github.com/ChristianBelloni/complex-bessel-rs"
metadata.docs.rs = ["--cfg", "doc"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
