[package]
name = "complex-bessel-rs"
description = "Library to compute Bessel functions"
version = "1.2.0"
edition = "2021"
readme = "README.md"
license = "MIT"
authors = ["Christian Belloni"]
homepage = "https://github.com/ChristianBelloni/complex-bessel-rs"
repository = "https://github.com/ChristianBelloni/complex-bessel-rs"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "doc"]


[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"

[build-dependencies]
cc = "1.0"
